--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,21 +33,21 @@
             <tbody>
             <tr>
                 <th>1</th>
-                <td><input type="radio" name="place" value="11" disabled> Ряд 1, Место 1</td>
-                <td><input type="radio" name="place" value="11"> Ряд 1, Место 2</td>
-                <td><input type="radio" name="place" value="11"> Ряд 1, Место 3</td>
+                <td><input type="radio" name="order" value="11" disabled> Ряд 1, Место 1</td>
+                <td><input type="radio" name="order" value="11"> Ряд 1, Место 2</td>
+                <td><input type="radio" name="order" value="11"> Ряд 1, Место 3</td>
             </tr>
             <tr>
                 <th>2</th>
-                <td><input type="radio" name="place" value="11"> Ряд 2, Место 1</td>
-                <td><input type="radio" name="place" value="11"> Ряд 2, Место 2</td>
-                <td><input type="radio" name="place" value="11"> Ряд 2, Место 3</td>
+                <td><input type="radio" name="order" value="11"> Ряд 2, Место 1</td>
+                <td><input type="radio" name="order" value="11"> Ряд 2, Место 2</td>
+                <td><input type="radio" name="order" value="11"> Ряд 2, Место 3</td>
             </tr>
             <tr>
                 <th>3</th>
-                <td><input type="radio" name="place" value="11"> Ряд 3, Место 1</td>
-                <td><input type="radio" name="place" value="11"> Ряд 3, Место 2</td>
-                <td><input type="radio" name="place" value="11"> Ряд 3, Место 3</td>
+                <td><input type="radio" name="order" value="11"> Ряд 3, Место 1</td>
+                <td><input type="radio" name="order" value="11"> Ряд 3, Место 2</td>
+                <td><input type="radio" name="order" value="11"> Ряд 3, Место 3</td>
             </tr>
             </tbody>
         </table>
