--- a/src/main/webapp/purchase.html
+++ b/src/main/webapp/purchase.html
@@ -36,8 +36,7 @@
             <button type="button" class="btn btn-success" id="pay-btn">Оплатить</button>
         </form>
     </div>
-    <div id="success" class="d-none">Место успешно забронировано</div>
-    <div id="failure" class="d-none">Во время бронирования произошла ошибка, проверьте состояния своего счёта</div>
+    <div id="status-message" class="d-none"></div>
     <a href="index.html">Вернуться на главную</a>
 </div>
 <script src="purchase.js"></script>
